--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -66,10 +66,7 @@ body {
   height: 40px;
 }
 
-.heading-primary {
-  color: var(--white);
-  text-align: center;
-  text-transform: uppercase;
+.header__main-content {
   position: absolute;
   top: 44%;
   left: 50%;
@@ -77,6 +74,13 @@ body {
   transform: translate(-50%, -50%);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  text-align: center;
+}
+
+.heading-primary {
+  color: var(--white);
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .heading-primary--main {
@@ -94,6 +98,8 @@ body {
 
 .heading-primary--sub {
   display: block;
+  -webkit-margin-after: 40px;
+  margin-block-end: 40px;
   font-size: 19px;
   font-weight: 300;
   letter-spacing: 15.2px;
@@ -113,10 +119,78 @@ body {
   color: var(--green-medium);
 }
 
+.heading-primary--main::-moz-selection,
+.heading-primary--sub::-moz-selection {
+  background-color: var(--white);
+  color: var(--green-medium);
+}
+
 .heading-primary--main::selection,
 .heading-primary--sub::selection {
   background-color: var(--white);
   color: var(--green-medium);
+}
+
+.btn:link,
+.btn:visited {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  letter-spacing: 1px;
+  padding: 16px 28px;
+  border-radius: 32px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  -webkit-transform: translateY(-3px);
+  transform: translateY(-3px);
+  letter-spacing: 2px;
+  box-shadow: 0 4px 10px hsla(0, 0%, 0%, 0.1);
+}
+
+.btn:hover::after {
+  -webkit-transform: scaleX(1.4) scaleY(1.6);
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn:active {
+  -webkit-transform: translateY(-1px);
+  transform: translateY(-1px);
+}
+
+.btn--white {
+  background: var(--white);
+  color: var(--gray-text);
+}
+
+.btn--white::after {
+  background-color: var(--white);
+}
+
+.btn--animated {
+  -webkit-animation: moveInBottom 0.5s ease-out 0.75s;
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
 }
 
 @-webkit-keyframes moveInLeft {
@@ -172,5 +246,33 @@ body {
     opacity: 1;
     -webkit-transform: translateX(0);
     transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
 }
