--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,42 +1,66 @@
+// Variables
+$green-light: hsl(111, 55%, 64%);
+$green-light-80: hsla(111, 55%, 64%, 0.8);
+$green-medium: hsl(140, 49%, 55%);
+$green-dark: hsl(160, 64%, 43%);
+$green-dark-80: hsla(160, 64%, 43%, 0.8);
+$gray-text: hsl(0, 0%, 47%);
+$white: hsl(0, 0%, 97%);
+
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 *,
 *::after,
 *::before {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
-  color: #787878;
-  overflow: hidden; }
+  color: $gray-text;
+  overflow: hidden;
+}
 
 .header {
   position: relative;
   height: 96vh;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(128, 214, 113, 0.8)), to(rgba(39, 180, 133, 0.8))), url("../assets/hero.jpg");
-  background-image: linear-gradient(to right, rgba(128, 214, 113, 0.8), rgba(39, 180, 133, 0.8)), url("../assets/hero.jpg");
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from($green-light-80),
+      to($green-dark-80)
+    ),
+    url("../assets/hero.jpg");
+  background-image: linear-gradient(to right, $green-light-80, $green-dark-80),
+    url("../assets/hero.jpg");
   background-size: cover;
   background-position: center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+}
 
 .logo-link {
   position: absolute;
   top: 4rem;
   left: 4rem;
-  padding: 0.8rem; }
+  padding: 0.8rem;
+}
 
 .logo {
-  height: 4rem; }
+  height: 4rem;
+}
 
 .header__main-content {
   position: absolute;
@@ -46,12 +70,14 @@ body {
   transform: translate(-50%, -50%);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  text-align: center; }
+  text-align: center;
+}
 
 .heading-primary {
-  color: #f7f7f7;
+  color: $white;
   text-align: center;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .heading-primary--main {
   display: block;
@@ -63,7 +89,8 @@ body {
   -webkit-animation-duration: 0.6s;
   animation-duration: 0.6s;
   -webkit-animation-timing-function: ease-out;
-  animation-timing-function: ease-out; }
+  animation-timing-function: ease-out;
+}
 
 .heading-primary--sub {
   display: block;
@@ -79,22 +106,26 @@ body {
   -webkit-animation-duration: 0.6s;
   animation-duration: 0.6s;
   -webkit-animation-timing-function: ease-out;
-  animation-timing-function: ease-out; }
+  animation-timing-function: ease-out;
+}
 
 .heading-primary--main::-moz-selection,
 .heading-primary--sub::-moz-selection {
-  background-color: #f7f7f7;
-  color: #54c47a; }
+  background-color: $white;
+  color: $green-medium;
+}
 
 .heading-primary--main::-moz-selection,
 .heading-primary--sub::-moz-selection {
-  background-color: #f7f7f7;
-  color: #54c47a; }
+  background-color: $white;
+  color: $green-medium;
+}
 
 .heading-primary--main::selection,
 .heading-primary--sub::selection {
-  background-color: #f7f7f7;
-  color: #54c47a; }
+  background-color: $white;
+  color: $green-medium;
+}
 
 .btn:link,
 .btn:visited {
@@ -107,7 +138,8 @@ body {
   padding: 1.6rem 2.8rem;
   border-radius: 3.2rem;
   -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
+  transition: all 0.3s;
+}
 
 .btn::after {
   content: "";
@@ -120,92 +152,123 @@ body {
   left: 0;
   z-index: -1;
   -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
+  transition: all 0.3s;
+}
 
 .btn:hover {
   -webkit-transform: translateY(-0.3rem);
   transform: translateY(-0.3rem);
   letter-spacing: 0.2rem;
-  box-shadow: 0 4px 1px rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 4px 1px hsla(0, 0%, 0%, 0.1);
+}
 
 .btn:hover::after {
   -webkit-transform: scaleX(1.4) scaleY(1.6);
   transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
+  opacity: 0;
+}
 
 .btn:active {
   -webkit-transform: translateY(-0.1rem);
-  transform: translateY(-0.1rem); }
+  transform: translateY(-0.1rem);
+}
 
 .btn--white {
-  background: #f7f7f7;
-  color: #787878; }
+  background: $white;
+  color: $gray-text;
+}
 
 .btn--white::after {
-  background-color: #f7f7f7; }
+  background-color: $white;
+}
 
 .btn--animated {
   -webkit-animation: moveInBottom 0.5s ease-out 0.75s;
   animation: moveInBottom 0.5s ease-out 0.75s;
   -webkit-animation-fill-mode: backwards;
-  animation-fill-mode: backwards; }
+  animation-fill-mode: backwards;
+}
 
 @-webkit-keyframes moveInLeft {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-9.6rem);
-    transform: translateX(-9.6rem); }
+    transform: translateX(-9.6rem);
+  }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-9.6rem);
-    transform: translateX(-9.6rem); }
+    transform: translateX(-9.6rem);
+  }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @-webkit-keyframes moveInRight {
   0% {
     opacity: 0;
     -webkit-transform: translateX(9.6rem);
-    transform: translateX(9.6rem); }
+    transform: translateX(9.6rem);
+  }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
     -webkit-transform: translateX(9.6rem);
-    transform: translateX(9.6rem); }
+    transform: translateX(9.6rem);
+  }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @-webkit-keyframes moveInBottom {
   0% {
     opacity: 0;
     -webkit-transform: translateY(4rem);
-    transform: translateY(4rem); }
+    transform: translateY(4rem);
+  }
+
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-    transform: translateY(0); } }
+    transform: translateY(0);
+  }
+}
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
     -webkit-transform: translateY(4rem);
-    transform: translateY(4rem); }
+    transform: translateY(4rem);
+  }
+
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-    transform: translateY(0); } }
+    transform: translateY(0);
+  }
+}
