--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -35,13 +35,11 @@ body {
 .header {
   position: relative;
   height: 96vh;
-  background-image: -webkit-gradient(
-      linear,
+  background-image: -webkit-gradient(linear,
       left top,
       right top,
       from($green-light-80),
-      to($green-dark-80)
-    ),
+      to($green-dark-80)),
     url("../assets/hero.jpg");
   background-image: linear-gradient(to right, $green-light-80, $green-dark-80),
     url("../assets/hero.jpg");
@@ -49,6 +47,17 @@ body {
   background-position: center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+  &__main-content {
+    position: absolute;
+    top: 44%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    text-align: center;
+  }
 }
 
 .logo-link {
@@ -62,69 +71,58 @@ body {
   height: 4rem;
 }
 
-.header__main-content {
-  position: absolute;
-  top: 44%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  text-align: center;
-}
-
 .heading-primary {
   color: $white;
   text-align: center;
   text-transform: uppercase;
-}
 
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.2rem;
-  -webkit-animation-name: moveInLeft;
-  animation-name: moveInLeft;
-  -webkit-animation-duration: 0.6s;
-  animation-duration: 0.6s;
-  -webkit-animation-timing-function: ease-out;
-  animation-timing-function: ease-out;
-}
+  &--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.2rem;
+    -webkit-animation-name: moveInLeft;
+    animation-name: moveInLeft;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
 
-.heading-primary--sub {
-  display: block;
-  -webkit-margin-after: 4rem;
-  margin-block-end: 4rem;
-  font-size: 1.9rem;
-  font-weight: 300;
-  letter-spacing: 1.52rem;
-  -webkit-margin-start: -1.6rem;
-  margin-inline-start: -1.6rem;
-  -webkit-animation-name: moveInRight;
-  animation-name: moveInRight;
-  -webkit-animation-duration: 0.6s;
-  animation-duration: 0.6s;
-  -webkit-animation-timing-function: ease-out;
-  animation-timing-function: ease-out;
-}
+  &--sub {
+    display: block;
+    -webkit-margin-after: 4rem;
+    margin-block-end: 4rem;
+    font-size: 1.9rem;
+    font-weight: 300;
+    letter-spacing: 1.52rem;
+    -webkit-margin-start: -1.6rem;
+    margin-inline-start: -1.6rem;
+    -webkit-animation-name: moveInRight;
+    animation-name: moveInRight;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
 
-.heading-primary--main::-moz-selection,
-.heading-primary--sub::-moz-selection {
-  background-color: $white;
-  color: $green-medium;
-}
+  &--main::-moz-selection,
+  &--sub::-moz-selection {
+    background-color: $white;
+    color: $green-medium;
+  }
 
-.heading-primary--main::-moz-selection,
-.heading-primary--sub::-moz-selection {
-  background-color: $white;
-  color: $green-medium;
-}
+  &--main::-moz-selection,
+  &--sub::-moz-selection {
+    background-color: $white;
+    color: $green-medium;
+  }
 
-.heading-primary--main::selection,
-.heading-primary--sub::selection {
-  background-color: $white;
-  color: $green-medium;
+  &--main::selection,
+  &--sub::selection {
+    background-color: $white;
+    color: $green-medium;
+  }
 }
 
 .btn:link,
