--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,6 +28,15 @@ body {
   background-position: center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+  .header__main-content {
+    position: absolute;
+    top: 44%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    text-align: center; }
 
 .logo-link {
   position: absolute;
@@ -38,63 +47,45 @@ body {
 .logo {
   height: 4rem; }
 
-.header__main-content {
-  position: absolute;
-  top: 44%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  text-align: center; }
-
 .heading-primary {
   color: #f7f7f7;
   text-align: center;
   text-transform: uppercase; }
-
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.2rem;
-  -webkit-animation-name: moveInLeft;
-  animation-name: moveInLeft;
-  -webkit-animation-duration: 0.6s;
-  animation-duration: 0.6s;
-  -webkit-animation-timing-function: ease-out;
-  animation-timing-function: ease-out; }
-
-.heading-primary--sub {
-  display: block;
-  -webkit-margin-after: 4rem;
-  margin-block-end: 4rem;
-  font-size: 1.9rem;
-  font-weight: 300;
-  letter-spacing: 1.52rem;
-  -webkit-margin-start: -1.6rem;
-  margin-inline-start: -1.6rem;
-  -webkit-animation-name: moveInRight;
-  animation-name: moveInRight;
-  -webkit-animation-duration: 0.6s;
-  animation-duration: 0.6s;
-  -webkit-animation-timing-function: ease-out;
-  animation-timing-function: ease-out; }
-
-.heading-primary--main::-moz-selection,
-.heading-primary--sub::-moz-selection {
-  background-color: #f7f7f7;
-  color: #54c47a; }
-
-.heading-primary--main::-moz-selection,
-.heading-primary--sub::-moz-selection {
-  background-color: #f7f7f7;
-  color: #54c47a; }
-
-.heading-primary--main::selection,
-.heading-primary--sub::selection {
-  background-color: #f7f7f7;
-  color: #54c47a; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.2rem;
+    -webkit-animation-name: moveInLeft;
+    animation-name: moveInLeft;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  .heading-primary--sub {
+    display: block;
+    -webkit-margin-after: 4rem;
+    margin-block-end: 4rem;
+    font-size: 1.9rem;
+    font-weight: 300;
+    letter-spacing: 1.52rem;
+    -webkit-margin-start: -1.6rem;
+    margin-inline-start: -1.6rem;
+    -webkit-animation-name: moveInRight;
+    animation-name: moveInRight;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  .heading-primary--main::-moz-selection, .heading-primary--sub::-moz-selection {
+    background-color: #f7f7f7;
+    color: #54c47a; }
+  .heading-primary--main::-moz-selection, .heading-primary--sub::-moz-selection {
+    background-color: #f7f7f7;
+    color: #54c47a; }
+  .heading-primary--main::selection, .heading-primary--sub::selection {
+    background-color: #f7f7f7;
+    color: #54c47a; }
 
 .btn:link,
 .btn:visited {
