Implement 7-1 architecture with Sass

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,272 +1,14 @@
-// Variables
-$green-light: hsl(111, 55%, 64%);
-$green-light-80: hsla(111, 55%, 64%, 0.8);
-$green-medium: hsl(140, 49%, 55%);
-$green-dark: hsl(160, 64%, 43%);
-$green-dark-80: hsla(160, 64%, 43%, 0.8);
-$gray-text: hsl(0, 0%, 47%);
-$white: hsl(0, 0%, 97%);
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
+@import "components/button";
 
-* {
-  margin: 0;
-  padding: 0;
-}
+@import "layout/header";
 
-body {
-  font-family: "IBM Plex Sans", sans-serif;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1.7;
-  color: $gray-text;
-  overflow: hidden;
-}
-
-.header {
-  position: relative;
-  height: 96vh;
-  background-image: -webkit-gradient(linear,
-      left top,
-      right top,
-      from($green-light-80),
-      to($green-dark-80)),
-    url("../assets/hero.jpg");
-  background-image: linear-gradient(to right, $green-light-80, $green-dark-80),
-    url("../assets/hero.jpg");
-  background-size: cover;
-  background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-
-  &__main-content {
-    position: absolute;
-    top: 44%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    text-align: center;
-  }
-}
-
-.logo-link {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-  padding: 0.8rem;
-}
-
-.logo {
-  height: 4rem;
-}
-
-.heading-primary {
-  color: $white;
-  text-align: center;
-  text-transform: uppercase;
-
-  &--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.2rem;
-    -webkit-animation-name: moveInLeft;
-    animation-name: moveInLeft;
-    -webkit-animation-duration: 0.6s;
-    animation-duration: 0.6s;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-
-  &--sub {
-    display: block;
-    -webkit-margin-after: 4rem;
-    margin-block-end: 4rem;
-    font-size: 1.9rem;
-    font-weight: 300;
-    letter-spacing: 1.52rem;
-    -webkit-margin-start: -1.6rem;
-    margin-inline-start: -1.6rem;
-    -webkit-animation-name: moveInRight;
-    animation-name: moveInRight;
-    -webkit-animation-duration: 0.6s;
-    animation-duration: 0.6s;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-
-  &--main::-moz-selection,
-  &--sub::-moz-selection {
-    background-color: $white;
-    color: $green-medium;
-  }
-
-  &--main::-moz-selection,
-  &--sub::-moz-selection {
-    background-color: $white;
-    color: $green-medium;
-  }
-
-  &--main::selection,
-  &--sub::selection {
-    background-color: $white;
-    color: $green-medium;
-  }
-}
-
-.btn:link,
-.btn:visited {
-  position: relative;
-  display: inline-block;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  letter-spacing: 0.1rem;
-  padding: 1.6rem 2.8rem;
-  border-radius: 3.2rem;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 3.2rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.btn:hover {
-  -webkit-transform: translateY(-0.3rem);
-  transform: translateY(-0.3rem);
-  letter-spacing: 0.2rem;
-  box-shadow: 0 4px 1px hsla(0, 0%, 0%, 0.1);
-}
-
-.btn:hover::after {
-  -webkit-transform: scaleX(1.4) scaleY(1.6);
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.btn:active {
-  -webkit-transform: translateY(-0.1rem);
-  transform: translateY(-0.1rem);
-}
-
-.btn--white {
-  background: $white;
-  color: $gray-text;
-}
-
-.btn--white::after {
-  background-color: $white;
-}
-
-.btn--animated {
-  -webkit-animation: moveInBottom 0.5s ease-out 0.75s;
-  animation: moveInBottom 0.5s ease-out 0.75s;
-  -webkit-animation-fill-mode: backwards;
-  animation-fill-mode: backwards;
-}
-
-@-webkit-keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-9.6rem);
-    transform: translateX(-9.6rem);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-9.6rem);
-    transform: translateX(-9.6rem);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@-webkit-keyframes moveInRight {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(9.6rem);
-    transform: translateX(9.6rem);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(9.6rem);
-    transform: translateX(9.6rem);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@-webkit-keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(4rem);
-    transform: translateY(4rem);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(4rem);
-    transform: translateY(4rem);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
+@import "pages/home";
