--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,146 +1,3 @@
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; }
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit; }
-
-* {
-  margin: 0;
-  padding: 0; }
-
-body {
-  font-family: "IBM Plex Sans", sans-serif;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1.7;
-  color: #787878;
-  overflow: hidden; }
-
-.header {
-  position: relative;
-  height: 96vh;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(128, 214, 113, 0.8)), to(rgba(39, 180, 133, 0.8))), url("../assets/hero.jpg");
-  background-image: linear-gradient(to right, rgba(128, 214, 113, 0.8), rgba(39, 180, 133, 0.8)), url("../assets/hero.jpg");
-  background-size: cover;
-  background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
-  .header__main-content {
-    position: absolute;
-    top: 44%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    text-align: center; }
-
-.logo-link {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-  padding: 0.8rem; }
-
-.logo {
-  height: 4rem; }
-
-.heading-primary {
-  color: #f7f7f7;
-  text-align: center;
-  text-transform: uppercase; }
-  .heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.2rem;
-    -webkit-animation-name: moveInLeft;
-    animation-name: moveInLeft;
-    -webkit-animation-duration: 0.6s;
-    animation-duration: 0.6s;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out; }
-  .heading-primary--sub {
-    display: block;
-    -webkit-margin-after: 4rem;
-    margin-block-end: 4rem;
-    font-size: 1.9rem;
-    font-weight: 300;
-    letter-spacing: 1.52rem;
-    -webkit-margin-start: -1.6rem;
-    margin-inline-start: -1.6rem;
-    -webkit-animation-name: moveInRight;
-    animation-name: moveInRight;
-    -webkit-animation-duration: 0.6s;
-    animation-duration: 0.6s;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out; }
-  .heading-primary--main::-moz-selection, .heading-primary--sub::-moz-selection {
-    background-color: #f7f7f7;
-    color: #54c47a; }
-  .heading-primary--main::-moz-selection, .heading-primary--sub::-moz-selection {
-    background-color: #f7f7f7;
-    color: #54c47a; }
-  .heading-primary--main::selection, .heading-primary--sub::selection {
-    background-color: #f7f7f7;
-    color: #54c47a; }
-
-.btn:link,
-.btn:visited {
-  position: relative;
-  display: inline-block;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  letter-spacing: 0.1rem;
-  padding: 1.6rem 2.8rem;
-  border-radius: 3.2rem;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
-
-.btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 3.2rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
-
-.btn:hover {
-  -webkit-transform: translateY(-0.3rem);
-  transform: translateY(-0.3rem);
-  letter-spacing: 0.2rem;
-  box-shadow: 0 4px 1px rgba(0, 0, 0, 0.1); }
-
-.btn:hover::after {
-  -webkit-transform: scaleX(1.4) scaleY(1.6);
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
-
-.btn:active {
-  -webkit-transform: translateY(-0.1rem);
-  transform: translateY(-0.1rem); }
-
-.btn--white {
-  background: #f7f7f7;
-  color: #787878; }
-
-.btn--white::after {
-  background-color: #f7f7f7; }
-
-.btn--animated {
-  -webkit-animation: moveInBottom 0.5s ease-out 0.75s;
-  animation: moveInBottom 0.5s ease-out 0.75s;
-  -webkit-animation-fill-mode: backwards;
-  animation-fill-mode: backwards; }
-
 @-webkit-keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -200,3 +57,141 @@ body {
     opacity: 1;
     -webkit-transform: translateY(0);
     transform: translateY(0); } }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+body {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #787878;
+  overflow: hidden; }
+
+.heading-primary {
+  color: #f7f7f7;
+  text-align: center;
+  text-transform: uppercase; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.2rem;
+    -webkit-animation-name: moveInLeft;
+    animation-name: moveInLeft;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  .heading-primary--sub {
+    display: block;
+    -webkit-margin-after: 4rem;
+    margin-block-end: 4rem;
+    font-size: 1.9rem;
+    font-weight: 300;
+    letter-spacing: 1.52rem;
+    -webkit-margin-start: -1.6rem;
+    margin-inline-start: -1.6rem;
+    -webkit-animation-name: moveInRight;
+    animation-name: moveInRight;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  .heading-primary--main::-moz-selection, .heading-primary--sub::-moz-selection {
+    background-color: #f7f7f7;
+    color: #54c47a; }
+  .heading-primary--main::-moz-selection, .heading-primary--sub::-moz-selection {
+    background-color: #f7f7f7;
+    color: #54c47a; }
+  .heading-primary--main::selection, .heading-primary--sub::selection {
+    background-color: #f7f7f7;
+    color: #54c47a; }
+
+.btn:link, .btn:visited {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  padding: 1.6rem 2.8rem;
+  border-radius: 3.2rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 3.2rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s; }
+
+.btn:hover {
+  -webkit-transform: translateY(-0.3rem);
+  transform: translateY(-0.3rem);
+  letter-spacing: 0.2rem;
+  box-shadow: 0 4px 1px rgba(0, 0, 0, 0.1); }
+  .btn:hover::after {
+    -webkit-transform: scaleX(1.4) scaleY(1.6);
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active {
+  -webkit-transform: translateY(-0.1rem);
+  transform: translateY(-0.1rem); }
+
+.btn--white {
+  background: #f7f7f7;
+  color: #787878; }
+  .btn--white::after {
+    background-color: #f7f7f7; }
+
+.btn--animated {
+  -webkit-animation: moveInBottom 0.5s ease-out 0.75s;
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards; }
+
+.header {
+  position: relative;
+  height: 96vh;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(128, 214, 113, 0.8)), to(rgba(39, 180, 133, 0.8))), url("../assets/hero.jpg");
+  background-image: linear-gradient(to right, rgba(128, 214, 113, 0.8), rgba(39, 180, 133, 0.8)), url("../assets/hero.jpg");
+  background-size: cover;
+  background-position: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+  .header__logo {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+    padding: 0.8rem; }
+    .header__logo__img {
+      height: 4rem; }
+  .header__main-content {
+    position: absolute;
+    top: 44%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    text-align: center; }
