--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -6,3 +6,8 @@ $green-dark: hsl(160, 64%, 43%);
 $green-dark-80: hsla(160, 64%, 43%, 0.8);
 $gray-text: hsl(0, 0%, 47%);
 $white: hsl(0, 0%, 97%);
+
+// Grid
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
