--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -76,8 +76,7 @@ body {
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
-  color: #787878;
-  overflow: hidden; }
+  color: #787878; }
 
 .heading-primary {
   color: #f7f7f7;
@@ -169,6 +168,33 @@ body {
   animation: moveInBottom 0.5s ease-out 0.75s;
   -webkit-animation-fill-mode: backwards;
   animation-fill-mode: backwards; }
+
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-block-end: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    background-color: goldenrod;
+    color: rgba(0, 0, 0, 0.64);
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-inline-end: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - (6rem) * 2) / 3); }
+  .row .col-2-of-3 {
+    width: calc( 100% - 6rem - calc((100% - (6rem) * 2) / 3)); }
+  .row .col-1-of-4 {
+    width: calc((100% - (6rem) * 3) / 4); }
+  .row .col-3-of-4 {
+    width: calc( 100% - 6rem - calc((100% - (6rem) * 3) / 4)); }
 
 .header {
   position: relative;
