Build the About section

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -6,6 +6,10 @@ $green-dark: hsl(160, 64%, 43%);
 $green-dark-80: hsla(160, 64%, 43%, 0.8);
 $gray-text: hsl(0, 0%, 47%);
 $white: hsl(0, 0%, 97%);
+$gray-light-1: hsl(0, 0%, 97%);
+
+// Typography
+$body-font-size: 1.6rem;
 
 // Grid
 $grid-width: 114rem;
