--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -51,3 +51,33 @@
     color: $green-medium;
   }
 }
+
+.heading-secondary {
+  text-transform: uppercase;
+  font-size: 3rem;
+  display: inline-block;
+  background-image: linear-gradient(32deg, $green-light, $green-dark);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all 0.2s;
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 3rem hsla(0, 0%, 0%, 0.2);
+  }
+}
+
+.heading-tertiary {
+  font-size: $body-font-size;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: $body-font-size;
+
+  &:not(:last-child) {
+    margin-block-end: 3.2rem;
+  }
+}
