--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,18 +1,20 @@
 .header {
   position: relative;
   height: 96vh;
-  background-image: -webkit-gradient(linear,
+  background-image: -webkit-gradient(
+      linear,
       left top,
       right top,
       from($green-light-80),
-      to($green-dark-80)),
+      to($green-dark-80)
+    ),
     url("../assets/hero.jpg");
   background-image: linear-gradient(to right, $green-light-80, $green-dark-80),
     url("../assets/hero.jpg");
   background-size: cover;
   background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
 
   &__logo {
     position: absolute;
@@ -24,7 +26,6 @@
       height: 4rem;
     }
   }
-
 
   &__main-content {
     position: absolute;
