--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -3,3 +3,19 @@
   padding: 24rem 0;
   margin-block-start: -16vh;
 }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from($green-light-80),
+      to($green-dark-80)
+    ),
+    url("../assets/nat-4.jpg");
+  background-image: linear-gradient(to right, $green-light-80, $green-dark-80),
+    url("../assets/nat-4.jpg");
+  background-size: cover;
+  background-position: center;
+}
