Build the Tours section

--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -4,11 +4,20 @@ $green-light-80: hsla(111, 55%, 64%, 0.8);
 $green-medium: hsl(140, 49%, 55%);
 $green-dark: hsl(160, 64%, 43%);
 $green-dark-80: hsla(160, 64%, 43%, 0.8);
+$yellow-dark: hsl(21, 100%, 59%);
+$yellow-dark-80: hsla(21, 100%, 59%, 0.8);
+$yellow-light: hsl(44, 100%, 50%);
+$yellow-light-80: hsla(44, 100%, 50%, 0.8);
+$blue-dark: hsl(246, 95%, 62%);
+$blue-dark-80: hsla(246, 95%, 62%, 0.8);
+$blue-light: hsl(209, 100%, 58%);
+$blue-light-80: hsla(209, 100%, 58%, 0.8);
 $gray-text: hsl(0, 0%, 47%);
 $white: hsl(0, 0%, 97%);
 $gray-light-1: hsl(0, 0%, 97%);
+$gray-light-2: hsl(0, 0%, 93%);
 
-// Typography
+// Typograph
 $body-font-size: 1.6rem;
 
 // Grid
