--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -29,3 +29,10 @@
     transform: skewY(4.8deg);
   }
 }
+
+.section-tours {
+  background-color: $gray-light-1;
+  padding: 24rem 0 16rem 0;
+  -webkit-margin-before: -8rem;
+  margin-block-start: -8rem;
+}
