--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -54,6 +54,15 @@
     }
   }
 
+  &--green {
+    background: $green-medium;
+    color: $white;
+
+    &::after {
+      background: $green-dark;
+    }
+  }
+
   &--animated {
     -webkit-animation: moveInBottom 0.5s ease-out 0.75s;
     animation: moveInBottom 0.5s ease-out 0.75s;
