--- a/natours/styles/styles.css
+++ b/natours/styles/styles.css
@@ -238,6 +238,7 @@ body {
 
 .card {
   position: relative;
+  -webkit-perspective: 80rem;
   perspective: 80rem;
   padding: 2.4rem;
   height: 56rem; }
@@ -249,36 +250,50 @@ body {
     height: 56rem;
     border-radius: 4px;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.16);
+    -webkit-transition: -webkit-transform 0.8s ease;
+    transition: -webkit-transform 0.8s ease;
     transition: transform 0.8s ease;
+    transition: transform 0.8s ease, -webkit-transform 0.8s ease;
     color: #27b485;
     font-size: 2.4rem;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: hidden; }
     .card__side--front {
       background-color: #f7f7f7; }
     .card__side--back {
       background-color: green;
+      -webkit-transform: rotateY(180deg);
       transform: rotateY(180deg); }
       .card__side--back--1 {
+        background-image: -webkit-gradient(linear, left top, right bottom, from(#ffbb00), to(#ff772e));
         background-image: linear-gradient(to right bottom, #ffbb00, #ff772e); }
       .card__side--back--2 {
+        background-image: -webkit-gradient(linear, left top, right bottom, from(#80d671), to(#27b485));
         background-image: linear-gradient(to right bottom, #80d671, #27b485); }
       .card__side--back--3 {
+        background-image: -webkit-gradient(linear, left top, right bottom, from(#2997ff), to(#5442fa));
         background-image: linear-gradient(to right bottom, #2997ff, #5442fa); }
   .card:hover .card__side--front {
+    -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
+    -webkit-transform: rotateY(0);
     transform: rotateY(0); }
   .card__picture {
     background-size: cover;
     height: 48%;
     background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 88%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 88%, 0 100%); }
     .card__picture--1 {
+      background-image: -webkit-gradient(linear, left top, right bottom, from(#ffbb00), to(#ff772e)), url("../assets/nat-5.jpg");
       background-image: linear-gradient(to right bottom, #ffbb00, #ff772e), url("../assets/nat-5.jpg"); }
     .card__picture--2 {
+      background-image: -webkit-gradient(linear, left top, right bottom, from(#80d671), to(#27b485)), url("../assets/nat-6.jpg");
       background-image: linear-gradient(to right bottom, #80d671, #27b485), url("../assets/nat-6.jpg"); }
     .card__picture--3 {
+      background-image: -webkit-gradient(linear, left top, right bottom, from(#2997ff), to(#5442fa)), url("../assets/nat-7.jpg");
       background-image: linear-gradient(to right bottom, #2997ff, #5442fa), url("../assets/nat-7.jpg"); }
   .card__heading {
     font-size: 2.4rem;
@@ -296,10 +311,13 @@ body {
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone; }
     .card__heading-span--1 {
+      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 187, 0, 0.8)), to(rgba(255, 119, 46, 0.8)));
       background-image: linear-gradient(to right bottom, rgba(255, 187, 0, 0.8), rgba(255, 119, 46, 0.8)); }
     .card__heading-span--2 {
+      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(128, 214, 113, 0.8)), to(rgba(39, 180, 133, 0.8)));
       background-image: linear-gradient(to right bottom, rgba(128, 214, 113, 0.8), rgba(39, 180, 133, 0.8)); }
     .card__heading-span--3 {
+      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(41, 151, 255, 0.8)), to(rgba(84, 66, 250, 0.8)));
       background-image: linear-gradient(to right bottom, rgba(41, 151, 255, 0.8), rgba(84, 66, 250, 0.8)); }
   .card__details {
     padding: 3.2rem; }
@@ -313,6 +331,7 @@ body {
         font-size: 1.5rem;
         padding: 1rem; }
         .card__details ul li:not(:last-child) {
+          -webkit-border-after: 1px solid #ededed;
           border-block-end: 1px solid #ededed; }
   .card__cta {
     position: absolute;
@@ -320,9 +339,11 @@ body {
     text-align: center;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
   .card__price-box {
     text-align: center;
+    -webkit-margin-after: 8rem;
     margin-block-end: 8rem;
     color: #f7f7f7; }
   .card__price-only {
