Fix Heading 2's ::selection style

--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -39,12 +39,6 @@
     color: $green-medium;
   }
 
-  &--main::-moz-selection,
-  &--sub::-moz-selection {
-    background-color: $white;
-    color: $green-medium;
-  }
-
   &--main::selection,
   &--sub::selection {
     background-color: $white;
@@ -66,6 +60,11 @@
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 3rem hsla(0, 0%, 0%, 0.2);
+  }
+
+  &::selection {
+    background-color: $green-light;
+    color: $white;
   }
 }
 
