Build the Stories section

--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $blue-light: hsl(209, 100%, 58%);
 $blue-light-80: hsla(209, 100%, 58%, 0.8);
 $gray-text: hsl(0, 0%, 47%);
 $white: hsl(0, 0%, 97%);
+$white-64: hsla(0, 0%, 97%, 0.64);
 $gray-light-1: hsl(0, 0%, 97%);
 $gray-light-2: hsl(0, 0%, 93%);
 
