--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -36,3 +36,8 @@
   -webkit-margin-before: -8rem;
   margin-block-start: -8rem;
 }
+
+.section-stories {
+  position: relative;
+  padding: 12rem 0;
+}
