--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -15,8 +15,10 @@ $blue-light-80: hsla(209, 100%, 58%, 0.8);
 $gray-text: hsl(0, 0%, 47%);
 $white: hsl(0, 0%, 97%);
 $white-64: hsla(0, 0%, 97%, 0.64);
+$white-90: hsla(0, 0%, 97%, 0.9);
 $gray-light-1: hsl(0, 0%, 97%);
 $gray-light-2: hsl(0, 0%, 93%);
+$gray-light-4: hsl(0, 0%, 64%);
 
 // Typograph
 $body-font-size: 1.6rem;
