--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     position: relative;
@@ -11,6 +12,10 @@
     border-radius: 3.2rem;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
+
+    // Changes for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &::after {
@@ -28,8 +33,8 @@
   }
 
   &:hover {
-    -webkit-transform: translateY(-0.3rem);
-    transform: translateY(-0.3rem);
+    -webkit-transform: translateY(-3px);
+    transform: translateY(-3px);
     letter-spacing: 0.2rem;
     box-shadow: 0 4px 1px hsla(0, 0%, 0%, 0.1);
 
@@ -40,9 +45,10 @@
     }
   }
 
-  &:active {
-    -webkit-transform: translateY(-0.1rem);
-    transform: translateY(-0.1rem);
+  &:active,
+  &:focus {
+    -webkit-transform: translateY(-1px);
+    transform: translateY(-1px);
   }
 
   &--white {
