--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -41,3 +41,26 @@
   position: relative;
   padding: 12rem 0;
 }
+
+.section-book {
+  padding: 16rem 0;
+  background-image: linear-gradient(to right bottom, $green-light, $green-dark);
+}
+
+.book {
+  background-image: linear-gradient(
+      104deg,
+      $white-90 0%,
+      $white-90 56%,
+      transparent 56%
+    ),
+    url("../assets/nat-10.jpg");
+  background-size: cover;
+  border-radius: 4px;
+  box-shadow: 0 1.5rem 4rem hsla(0, 0%, 0%, 0.24);
+
+  &__form {
+    width: 50%;
+    padding: 5.6rem;
+  }
+}
